# RN-Transformers

./: .gitignore  README.md  pyproject.toml  requirements.txt
project/: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  INSTALACAO.md  OLLAMA.md  README.md  config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
project/.chainlit/: config.toml
project/chromadb/: chroma.sqlite3
project/simple_rag/: __init__.py  main.py  main.py.bkp.py
project/simple_rag/agent/: __init__.py  agent.py
project/simple_rag/config/: config.py
project/simple_rag/tools/: __init__.py  retriever.py
project/simple_rag/utils/: __init__.py  data_masking.py  logger.py  pdf_processor.py  vectorstore.py
project/src/llm_rag/: __init__.py  agent.py  config.py  embeddings.py  pdf_processor.py  vector_store.py
project/src/llm_rag/graph/: __init__.py  nodes.py  state.py  workflow.py
project/src/llm_rag/ui/: __init__.py  app.py
project/tests/: __init__.py  test_config.py  test_embeddings.py  test_pdf_processor.py
tarefa1/: README.md  modelo_linguagem_ngrama.ipynb
