[tool.poetry]
name = "llm-rag"
version = "0.1.0"
description = "A package for implementing RAG (Retrieval-Augmented Generation) with LLMs"
authors = ["Flavio De Oliveira Vieira <flovieira@rd.com.br>"]
readme = "README.md"
packages = [{include = "llm_rag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
chromadb = "^1.3.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
ruff = "^0.1.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydocstyle]
convention = "google"
add-ignore = []
