[tool.poetry]
name = "llm-rag"
version = "0.1.0"
description = "A package for implementing RAG (Retrieval-Augmented Generation) with LLMs"
authors = ["Flavio De Oliveira Vieira <flovieira@rd.com.br>"]
readme = "README.md"
packages = [{include = "llm_rag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
chromadb = "^0.4.22"
chainlit = "^1.0.0"
langgraph = "^0.0.20"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.2"
langchain-anthropic = "^0.1.1"
langchain-ollama = "^0.0.1"
pymupdf = "^1.23.0"
sentence-transformers = "^2.2.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
tiktoken = "^0.5.0"
openai = "^1.10.0"
anthropic = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
ruff = "^0.1.0"
pydocstyle = "^6.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydocstyle]
convention = "google"
add-ignore = []
